--- a/style.css
+++ b/style.css
@@ -127,12 +127,12 @@ a{
     visibility: hidden;
  }
  .slides{
-    width: 400%;
+    width: 600%;
     height: 100%;
     display: flex;
  }
  .slide{
-    width: 25%;
+    width: 17%;
     transition: all .6s ease;
  }
  .slide img{
@@ -143,17 +143,21 @@ a{
     margin-left: 0;
  }
  #r2:checked ~ .s1 {
-    margin-left: -25%;
+    margin-left: -17%;
  }
  #r3:checked ~ .s1 {
-    margin-left: -50%;
+    margin-left: -34%;
  }
  #r4:checked ~ .s1 {
-    margin-left: -75%;
+    margin-left: -51%;
  }
-.btn{
-    color: black;
-}
+ #r5:checked ~ .s1 {
+    margin-left: -68%;
+ }
+ #r6:checked ~ .s1 {
+    margin-left: -85%;
+ }
+
 
 
 /* .footer_icon{
