--- a/project/final.css
+++ b/project/final.css
@@ -20,9 +20,14 @@ a{
 .mini-containere{
     border: 2px solid silver;
     border-radius: 20px 20px 0 0 ;
+    width: 250px;
+    height:500px;
 }
 .mini-photo_souse{
     border-radius: 20px 20px 0 0 ;
+    width: 250px;
+    height: 250px;
+    margin-bottom: 80px;
 }
 .nav1{
     background-color: rgb(234, 233, 233);
