--- a/project/final.css
+++ b/project/final.css
@@ -56,7 +56,7 @@ a{
 .main{
     margin-left: 200px;
     margin-right: 200px;
-    width: 1200px;
+    width: 72%;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -65,7 +65,6 @@ a{
 .mini-photo{
     width: 250px;
     /* height: 250px; */
-    margin-bottom: 80px;
     border-radius: 20px;
 }
 .mini-photo_souse{
@@ -106,7 +105,8 @@ a{
 }
 .footer1{
     border: 0px solid;
-    background-color: black; 
+    background-color: black;
+    margin-top: 10px;
 }
 .footer2{
     
@@ -122,6 +122,11 @@ a{
 .footer_icon{
     height: 30px;
     border-radius: 10px;
+}
+.title1{
+    width: 15%;
+    margin-left: auto;
+    margin-right: auto;
 }
 @media screen and (max-width: 850px){
     .footer2{
