--- a/Project/final.css
+++ b/Project/final.css
@@ -10,6 +10,9 @@ a{
     text-decoration: none;
     color: rgb(57, 57, 57);
 }
+.h1, .h2, .h3, .h4, .h5, .h6{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .hfhf{
     position: relative;
     justify-content: center;
